changed /state (without playerid now)
